change color and font style

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
       ipsam velit accusamus architecto neque tempora repellat? Explicabo,
       necessitatibus?
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+      nihil.
+    </p>
   </body>
 </html>
