--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
       nihil.
     </p>
+    <script src="script.js"></script>
   </body>
 </html>
