--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
       nihil.
     </p>
+    <div class="circle"></div>
     <script src="script.js"></script>
   </body>
 </html>
